hphp/test/slow/hack_mode/2203.php.expectf

Fatal error: HH mode: content before <?hh (Line: %d, Char: %d)
syntax error, unexpected T_HH_ERROR, expecting $end in %s/test/slow/hack_mode/2203.php on line 1
